<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashActivity"
        android:background="@color/soft_blue">

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_splash_start"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/indentation_16"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_splash_end"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/indentation_16"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_splash_top"
            app:layout_constraintGuide_begin="@dimen/indentation_16"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_splash_bottom"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/indentation_16"/>

    <TextView
            android:id="@+id/tv_splash_welcome_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_obscuralight"
            android:layout_marginTop="@dimen/indentation_16"
            app:layout_constraintTop_toBottomOf="@+id/guideline_splash_top"
            app:layout_constraintStart_toEndOf="@+id/guideline_splash_start"
            android:layout_marginStart="@dimen/indentation_16"
            android:textSize="@dimen/text_size_34"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"/>

    <TextView
            android:id="@+id/tv_splash_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indentation_32"
            app:layout_constraintTop_toBottomOf="@+id/tv_splash_welcome_header"
            app:layout_constraintStart_toEndOf="@+id/guideline_splash_start"
            android:layout_marginStart="@dimen/indentation_16"
            android:textColor="@color/light_grey"
            android:textStyle="normal"
            android:textSize="@dimen/txt_size_16"
            android:fontFamily="sans-serif"
            android:text="@string/text_information"
    />

    <TextView
            android:id="@+id/tv_splash_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_splash_information"
            android:layout_marginTop="@dimen/indentation_64"
            app:layout_constraintStart_toEndOf="@id/guideline_splash_start"
            android:layout_marginStart="@dimen/indentation_16"
            android:text="@string/text_already_have_an_account"
            android:textSize="@dimen/txt_size_16"
            android:textColor="@color/light_grey"
            android:textStyle="normal"
            android:fontFamily="sans-serif"/>

    <TextView
            android:id="@+id/tv_splash_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_18"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:layout_marginTop="@dimen/indentation_64"
            app:layout_constraintTop_toBottomOf="@+id/tv_splash_information"
            app:layout_constraintStart_toEndOf="@+id/tv_splash_have_an_account"
            android:layout_marginStart="@dimen/indentation_8"/>

    <TextView
            android:id="@+id/tv_splash_not_with_us_yet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline_splash_start"
            android:layout_marginStart="@dimen/indentation_16"
            android:text="@string/text_not_with_us_yet"
            android:textSize="@dimen/txt_size_18"
            android:textColor="@color/light_grey"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:layout_marginTop="@dimen/indentation_64"
            app:layout_constraintTop_toBottomOf="@+id/tv_splash_have_an_account"/>

    <TextView
            android:id="@+id/tv_splash_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_splash_not_with_us_yet"
            android:layout_marginStart="@dimen/indentation_8"
            android:layout_marginTop="@dimen/indentation_64"
            app:layout_constraintTop_toBottomOf="@id/tv_splash_have_an_account"
            android:text="@string/text_sing_up"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="@dimen/txt_size_18"
            android:fontFamily="sans-serif-medium"/>

</androidx.constraintlayout.widget.ConstraintLayout>